[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/screens/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Button_New" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "New"

[node name="Button_Load" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Load"

[node name="Button_Sandbox" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Sandbox"

[node name="Button_Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button_New" to="." method="_on_Button_New_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Load" to="." method="_on_Button_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Sandbox" to="." method="_on_Button_Sandbox_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Quit" to="." method="_on_Button_Quit_pressed"]
